<resources>
    <string name="app_name">TENTEK</string>
    <string name="m2_parse_error_msg">Failed to parse data</string>
    <string name="m3_bad_network_msg">Internet problem</string>
    <string name="m4_connect_error_msg">Connection error</string>
    <string name="m5_connect_timeout_msg">Connection time out</string>
    <string name="m6_other_msg">Unknown mistake</string>
    <string name="m1_login">Login</string>
    <string name="m2_register">Register</string>
    <string name="m3_catch_every_sunbeam">—  Catch Every Sunbeam  —</string>
    <string name="m4_auto">Auto</string>
    <string name="m5_email_address">Email Address</string>
    <string name="m6_remember_me">Remember me</string>
    <string name="m7_username_cant_empty">The Username cannot be empty</string>
    <string name="m8_password_cant_empty">The password cannot be empty</string>
    <string name="m9_save">Save</string>
    <string name="m10_sms_retrieval">SMS retrieval</string>
    <string name="m11_app_want_to_visit_format">%s wants to access your %s</string>
    <string name="m12_to_app_set_permission_format">You have not allowed %s to get your %s permission, you can enable it in the app settings</string>
    <string name="m13_password_characters">The password is 6-30 characters, a combination
of letters, numbers and symbols.</string>
    <string name="m14_seach">Search</string>
    <string name="m15_installer_code_not_empty">Installer ID cannot be empty</string>
    <string name="m16_home">Home</string>
    <string name="m17_energy">Energy</string>
    <string name="m18_array">Array</string>
    <string name="m19_station">Station</string>
    <string name="m20_manu">Menu</string>
    <string name="m21_message">Message</string>
    <string name="m22_About">About</string>
    <string name="m23_log_out">Log Out</string>
    <string name="m24_personal_avatar">个人头像</string>
    <string name="m25_save">Save</string>
    <string name="m26_old_password">旧密码</string>
    <string name="m27_new_password">新密码</string>
    <string name="m28_password_cant_empty">密码不能为空</string>
    <string name="m29_passwords_are_inconsistent">两次密码不一致</string>
    <string name="m30_password_cannot_be_less_than_6_digits">密码不能少于6位数</string>
    <string name="m31_passwords_are_inconsistent">两次密码不一致</string>
    <string name="m32_load">Load</string>
    <string name="m33_bat">Bat</string>
    <string name="m34_plant">Plant</string>
    <string name="m35_please_input_plant_or_sn">请输入电站名称或电站设备中的序列号</string>
    <string name="m36_all">全部</string>
    <string name="m37_online">在线</string>
    <string name="m38_offline">离线</string>
    <string name="m39_trouble">故障</string>
    <string name="m40_all_format">全部(%d)</string>
    <string name="m41_online_format">在线(%d)</string>
    <string name="m42_offline_format">离线(%d)</string>
    <string name="m43_trouble_format">故障(%d)</string>
    <string name="m44_add_plant">添加电站</string>
    <string name="m45_current_power">实时功率</string>
    <string name="m46_please_select_install_date">请选择安装日期</string>
    <string name="m47_please_input_total_component_power">请输入组件总功率</string>
    <string name="m48_kwh">kWh</string>
    <string name="m49_mwh">MWh</string>
    <string name="m50_kwp">kWp</string>
    <string name="m51_mwp">MWp</string>
    <string name="m52_kw">kW</string>
    <string name="m53_mw">MW</string>
    <string name="m54_hz">Hz</string>
    <string name="m55_kva">KVA</string>
    <string name="m56_kvar">KVar</string>
    <string name="m57_v">V</string>
    <string name="m58_a">A</string>
    <string name="m59_kg">kg</string>
    <string name="m60_t">t</string>
    <string name="m61_power_output">功率/电量</string>
    <string name="m62_soc">SOC</string>
    <string name="m63_charge_discharge_output">充放电</string>
    <string name="m64_wind_direction_format">风向:%s</string>
    <string name="m65_wind_speed_format">风速:%s</string>
    <string name="m66_info_space_not_permission">浏览账号没有权限</string>
    <string name="m67_next_step">下一步</string>
    <string name="m68_plant_name">电站名称</string>
    <string name="m69_please_select_country_or_area_2">请选择国家/地区</string>
    <string name="m70_please_input_plant_name">请填写电站名称</string>
    <string name="m71_install_date">安装日期</string>
    <string name="m72_plant_address">电站地址</string>
    <string name="m73_unselected_country_or_area">未选择国家/地区</string>
    <string name="m74_take_a_picture">拍照</string>
    <string name="m75_from_the_album">从相册选取</string>
    <string name="m76_device_count">设备数量</string>
    <string name="m77_total_component_power">组件总功率</string>
    <string name="m78_today_generate_electricity">今日发电</string>
    <string name="m79_month_generate_electricity">当月发电</string>
    <string name="m80_total_generate_electricity">累计发电</string>
    <string name="m81_nothing_plant_format">无%s电站</string>
    <string name="m82_system_nomal">System Nomal</string>
    <string name="m83_system_exception">System Exception</string>
    <string name="m84_net_use">Net Use</string>
    <string name="m85_impact">impact</string>
    <string name="m86_co2">co2</string>
    <string name="m87_coal">coal</string>
    <string name="m88_Deforestation">Deforestation</string>
    <string name="m89_total">Total</string>
    <string name="m90_serial_number_not_null">SN cannot be blank</string>
    <string name="m91_check_code_not_null">Verification code cannot be blank</string>
    <string name="m92_add_data_logger">Add data logger</string>
    <string name="m93_input_data_logger_sn_and_check_code">Enter the logger SN and verification code</string>
    <string name="m94_serial_number">SN</string>
    <string name="m95_check_code">Verification</string>
    <string name="m96_please_input_data_logger_sn">Please enter SN of data logger</string>
    <string name="m97_please_input_data_logger_check_code">Please enter verification of data logger</string>
    <string name="m98_connect">Connect…</string>
    <string name="m99_configure_the_device">Configure the device to the networl</string>
    <string name="m100_please_select_wifi">Please Select 2.4G wifi</string>
    <string name="m101_cancel">Cancel</string>
    <string name="m102_comfir">Comfir</string>
    <string name="m103_turn_on_gps">turn on gps</string>
    <string name="m104_gps_to_getwifi">To get the wifi list, you need to turn on gps</string>
    <string name="m105_pv_station_pic">PV Station Picture</string>
    <string name="m106_load_pic">Upload Picture</string>
    <string name="m107_station_type">Station Type</string>
    <string name="m108_select_station_type">Select the Station Type</string>
    <string name="m109_station_name">Station name</string>
    <string name="m110_installtion_date">Select the installtion date</string>
    <string name="m111_station_address">Station Address</string>
    <string name="m112_found_revenge">Found Revenge</string>
    <string name="m113_pv">PV</string>
    <string name="m114_storage">Storage</string>
    <string name="m115_enter_the_plant_addr">Enter the plant address</string>
    <string name="m116_please_select_city">请选择城市</string>
    <string name="m117_please_select_symbol">请选择货币符号</string>
    <string name="m118_please_plant_type">请选择电站类型</string>
    <string name="m119_please_plant_address">请输入电站地址</string>
    <string name="m120_crop_image_menu_crop">裁剪</string>
    <string name="m121_pick_image_intent_chooser_title">選擇圖片</string>
    <string name="m122_today">Today</string>
    <string name="m123_Total">Total</string>
    <string name="m124_on_line">on-line</string>
    <string name="m125_off_line">off-line</string>
    <string name="m126_w">w</string>
    <string name="m127_hps">HPS</string>
    <string name="m128_xp">XP</string>
    <string name="m129_hvbox">HVBOX</string>
    <string name="m130_mgrn_inverter">mgrn inverter</string>
    <string name="m163_battery_model">Battery Model</string>
    <string name="m164_battery_sn">Battery SN</string>
    <string name="m165_battery_id">Battery ID</string>
    <string name="m166_bms_type">BMS Type</string>
    <string name="m167_fw_version_1">FW Version 1</string>
    <string name="m168_actual_protocol">Actual Protocol</string>
    <string name="m169_fw_version_1">Total Voltage</string>
    <string name="m170_current">Current</string>
    <string name="m171_discharge_power">Discharge Power</string>
    <string name="m172_battery_soc">Battery SOC</string>
    <string name="m173_max_volt">Max Volt</string>
    <string name="m174_min_volt">Min Volt</string>
    <string name="m175_max_tem">Max Tem</string>
    <string name="m176_min_tem">Min Tem</string>
    <string name="m177_charge_energy">Charge Energy</string>
    <string name="m178_discharge_energy">DisCharge Energy</string>
    <string name="m179_main_relay_staues">Main Relay Staues</string>
    <string name="m180_charged_voltage">Charged Voltage</string>
    <string name="m181_battery_cycles">Battery Cycles</string>
    <string name="m182_max_voltage">Max Voltage</string>
    <string name="m183_min_voltage">Min Voltage</string>
    <string name="m184_actual_current">Actual Current</string>
    <string name="m185_max_temperature">Max temperature</string>
    <string name="m186_min_temperature">Min temperature</string>
    <string name="m187_inverter">Inverter</string>
    <string name="m188_device_type">Device type</string>
    <string name="m189_hv_battery_box">HV Battery Box</string>
    <string name="m190_down_my_data">Download My Data</string>
    <string name="m187_device_sn">Device SN</string>
    <string name="m188_rated_power">Rated Power</string>
    <string name="m189_model">Model</string>
    <string name="m190_firmware_version">Firmware Version</string>
    <string name="m191_pcs_data_1">PCS Data 1</string>
    <string name="m192_u_phase_voltage">U-Phase Voltage</string>
    <string name="m193_u_phase_current">U-Phase Current</string>
    <string name="m194_v_phase_voltage">V Phase Voltage</string>
    <string name="m195_v_phase_current">V-Phase Current</string>
    <string name="m196_w_phase_voltage">W-Phase Voltage</string>
    <string name="m197_w_phase_current">W-Phase Current</string>
    <string name="m198_active_power">Active Power</string>
    <string name="m199_reactive_power">Reactive Power</string>
    <string name="m200_ac_frequency">AC Frequency</string>
    <string name="m201_operating_mode">Operating Mode</string>
    <string name="m202_device_status">Device status</string>
    <string name="m224_device_type">Device Type</string>
    <string name="m225_soft_ware_version">Software Version</string>
    <string name="m226_work_mode">Work Mode</string>
    <string name="m227_input_voltage">Input Voltage</string>
    <string name="m228_inlet_temp">Inlet Temp.</string>
    <string name="m227_input_power">Input Power</string>
    <string name="m228_input_current">Input Current</string>
    <string name="m227_dc_run_state">DC Run State</string>
    <string name="m228_dc_access_type">DC Access Type</string>
    <string name="m229_dc_fault_status">DC Fault Status</string>
    <string name="m230_high_side_voltage">High Side voltage</string>
    <string name="m231_electrical_cabinet">Electrical Cabinet</string>
    <string name="m213_bat_data">Bat. Data</string>
    <string name="m214_run_status">Run Status</string>
    <string name="m215_max_charge_current">Max Charge Current</string>
    <string name="m216_soh">SOH</string>
    <string name="m217_max_cell_vol">Max Cell Voltage</string>
    <string name="m218_max_discharge_current">Max Discharge Current</string>
    <string name="m219_max_cell_temp">Max Cell Temp.</string>
    <string name="m220_min_cell_temp">Min Cell Temp.</string>
    <string name="m221_forbid_charge">Forbid Charge</string>
    <string name="m38_setting">Setting</string>
    <string name="m77_password">Password</string>
    <string name="m79_country">Country</string>
    <string name="m153_email">Email</string>
    <string name="m186_installer_code">Installer Code</string>
</resources>