<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:background="@color/white"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_impact_title"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="@dimen/dp_10"
            android:text="@string/m85_impact"
            android:textColor="@color/color_app_main"
            android:textSize="@dimen/size_content_sp_16"
            android:textStyle="bold" />


        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/impact_chart"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"

            />


        <LinearLayout
            android:gravity="center"
            android:id="@+id/ll_today"
            android:layout_height="@dimen/dp_200"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_imcome"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="50.2kWh"
                android:textColor="@color/black_333333"
                android:textSize="@dimen/size_content_sp_14"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_today"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/m122_today"
                android:textColor="@color/color_999999"
                android:textSize="@dimen/size_content_sp_14" />


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">


        <LinearLayout
            android:background="@color/color_white"
            android:gravity="center_vertical"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="16dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingTop="16dp">

            <LinearLayout
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_height="30dp"
                    android:layout_width="30dp"
                    android:src="@drawable/ic_co2" />

                <LinearLayout
                    android:gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_width="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text='@{ValueUtil.INSTANCE.valueFromKWh(environment.co2).first}'
                        android:textColor="@color/text_black"
                        android:textSize="@dimen/text_medium"
                        android:textStyle="bold"
                        tools:text="18882.3" />

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:textColor="@color/text_gray_99"
                        android:textSize="@dimen/text_small"
                        tools:text="t" />

                </LinearLayout>

                <TextView
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_width="wrap_content"
                    android:text="@string/m86_co2"
                    android:textColor="@color/text_gray_99"
                    android:textSize="@dimen/text_10" />

            </LinearLayout>

            <View
                android:background="@color/color_line"
                android:layout_height="45dp"
                android:layout_width="1dp" />

            <LinearLayout
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_height="30dp"
                    android:layout_width="30dp"
                    android:src="@drawable/ic_coal" />

                <LinearLayout
                    android:gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_width="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:textColor="@color/text_black"
                        android:textSize="@dimen/text_medium"
                        android:textStyle="bold"
                        tools:text="18882.3" />

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:textColor="@color/text_gray_99"
                        android:textSize="@dimen/text_small"
                        tools:text="t" />

                </LinearLayout>

                <TextView
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_width="wrap_content"
                    android:text="@string/m87_coal"
                    android:textColor="@color/text_gray_99"
                    android:textSize="@dimen/text_10" />

            </LinearLayout>

            <View
                android:background="@color/color_line"
                android:layout_height="45dp"
                android:layout_width="1dp" />

            <LinearLayout
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_height="30dp"
                    android:layout_width="30dp"
                    android:src="@drawable/ic_tree" />

                <LinearLayout
                    android:gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_width="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:textColor="@color/text_black"
                        android:textSize="@dimen/text_medium"
                        android:textStyle="bold"
                        tools:text="18882.3" />

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:textColor="@color/text_gray_99"
                        android:textSize="@dimen/text_small" />

                </LinearLayout>

                <TextView
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_width="wrap_content"
                    android:text="@string/m88_Deforestation"
                    android:textColor="@color/text_gray_99"
                    android:textSize="@dimen/text_10" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


</LinearLayout>
