<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/color_white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_co2" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    tools:text="18882.3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text='@{ValueUtil.INSTANCE.valueFromKG(total.formulaCo2).first}'
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/text_medium"
                    android:textStyle="bold" />

                <TextView
                    tools:text="t"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text='@{ValueUtil.INSTANCE.valueFromKG(total.formulaCo2).second}'
                    android:textColor="@color/text_gray_99"
                    android:textSize="@dimen/text_small" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:text="@string/m86_co2"
                android:textColor="@color/text_gray_99"
                android:textSize="@dimen/text_10" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="45dp"
            android:background="@color/color_line" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_coal" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    tools:text="18882.3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text='@{ValueUtil.INSTANCE.valueFromKG(total.formulaCoal).first}'
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/text_medium"
                    android:textStyle="bold" />

                <TextView
                    tools:text="t"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text='@{ValueUtil.INSTANCE.valueFromKG(total.formulaCoal).second}'
                    android:textColor="@color/text_gray_99"
                    android:textSize="@dimen/text_small" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:text="@string/m87_coal"
                android:textColor="@color/text_gray_99"
                android:textSize="@dimen/text_10" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="45dp"
            android:background="@color/color_line" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_tree" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    tools:text="18882.3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text='@{total.treeCountStr}'
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/text_medium"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_gray_99"
                    android:textSize="@dimen/text_small" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:text="@string/m88_Deforestation"
                android:textColor="@color/text_gray_99"
                android:textSize="@dimen/text_10" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>